# forge

./: .conda_env_name.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FOUNDATION.md  LICENSE  README.md  REPO_STRUCTURE.md  c4.toml  cli_wiring_exempt.toml  pyproject.toml  pyrefly.toml  ruff.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: issue-triage-forge.md
.claude/skills/promote/: SKILL.md
.githooks/: install.sh  post-checkout  post-merge  pre-commit
.github/workflows/: ci.yml
agents/: _TEMPLATE.md  design-checker.md  docs-types-checker.md  git-commit-push.md  issue-triage.md  knowledge-search.md  perf-optimizer.md  pr-manager.md  precommit-fixer.md  security-checker.md  test-advisor.md  test-writer.md  weekly-summary.md
claude-hooks/: block_branch_deletion.sh  block_claude_attribution.sh  block_continuation_delete.sh  block_force_push.sh  block_install_deps.sh  block_no_verify.sh  block_pr_merge.sh  block_protected_branches.sh  block_protected_files.sh  block_raw_git.sh  block_raw_ruff.sh  check_commit_format.sh  check_foundation_sync.sh  warn_pr_checks.sh
dev/: README.md  get_conda_env_name.sh  setup.sh  test-matrix.sh
docs/: adopting.md  api-digest.md  architecture.dsl  audit-pack.md  c4-architecture.md  ci-access.md  ci-recipe.md  claude-code-plugin.md  cli-reference.md  configuration.md  customizing-precommit.md  release-process.md  rust-core-migration-plan.md  security.md  standalone-installers.md
docs/proposals/: c4-generator.md  rust-core.md
skills/c4/: SKILL.md
skills/commit/: SKILL.md
skills/fix/: SKILL.md
skills/next/: SKILL.md
skills/pr/: SKILL.md
skills/review/: SKILL.md
skills/smart-test/: SKILL.md
skills/test/: SKILL.md
skills/triage/: SKILL.md
skills/weekly/: SKILL.md
src/forge/: __init__.py  _hook_helpers.py  claude_settings_schema.py  config.py  continuation_append.py  doctor.py  fix_ruff.py  forge_config.py  gen_api_digest.py  gen_c4.py  gen_cli_reference.py  gen_commit_types.py  gen_common.py  git_utils.py  import_graph.py  install_bootstrap.py  install_claude_settings.py  install_claudemd.py  install_githooks.py  install_labels.py  install_readme_badges.py  next_prep.py  pip_audit_json.py  post_checkout.py  post_merge.py  pr_delta.py  pr_squash_comment.py  precommit.py  run_context.py  slow_tests_report.py  upgrade.py  verify_changelog_history.py  verify_cli_wiring.py  verify_cve_usage.py  verify_doc_consistency.py  verify_docstring_coverage.py  verify_docstrings.py  verify_main_tags.py  verify_manifest.py  verify_plugin_version.py  (+2 more)
src/forge/audit/: __init__.py  agents.py  all.py  claims.py  common.py  data.py  deps.py  dup.py  orphans.py  suppressions.py
src/forge/data/: FOUNDATION.md  VENDORED.md  mermaid-layout-elk.iife.min.js
src/forge/smart_test/: __init__.py  cli.py  coverage.py  dependencies.py  git_helpers.py  runner.py
tests/: __init__.py  conftest.py  test_claude_hooks.py  test_claude_settings_schema.py  test_config.py  test_continuation_append.py  test_doctor.py  test_fix_ruff.py  test_forge_config.py  test_gen_api_digest.py  test_gen_c4.py  test_gen_cli_reference.py  test_gen_commit_types.py  test_gen_common.py  test_git_utils.py  test_hook_helpers.py  test_import_graph.py  test_install_bootstrap.py  test_install_claude_settings.py  test_install_claudemd.py  test_install_githooks.py  test_install_labels.py  test_install_readme_badges.py  test_manifests.py  test_next_prep.py  test_pip_audit_json.py  test_post_checkout.py  test_post_merge.py  test_pr_delta.py  test_pr_squash_comment.py  test_precommit.py  test_run_context.py  test_slow_tests_report.py  test_smart_test_cli.py  test_smart_test_coverage.py  test_smart_test_dependencies.py  test_smart_test_git_helpers.py  test_smart_test_runner.py  test_smart_test_superset.py  test_upgrade.py  (+10 more)
tests/audit/: __init__.py  test_agents.py  test_all.py  test_claims.py  test_common.py  test_data.py  test_deps.py  test_dup.py  test_orphans.py  test_suppressions.py
