[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-scripts"
dynamic = ["version"]
description = "A shared engineering foundation for Python repos: pip-installable quality-gate CLIs (lint, docstrings, audits), a drop-in pre-commit hook, and an optional Claude Code plugin layered on top."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jean Simonnet" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "ruff>=0.6",
    "interrogate>=1.5",
    # pip-audit backs the default (non-opt-in) pip_audit pre-commit step, so
    # it ships as a core dependency — same rule as ruff/interrogate. Without
    # it the CVE scan would silently no-op while still appearing in the gate
    # output, giving false assurance (#71). Opt-in step tools (pyrefly,
    # vulture) stay in extras precisely because their steps are opt-in.
    "pip-audit>=2.7",
]

[project.scripts]
fix-forge-ruff = "forge.fix_ruff:main"
verify-forge-docstrings = "forge.verify_docstrings:main"
verify-forge-docstring-coverage = "forge.verify_docstring_coverage:main"
verify-forge-manifest = "forge.verify_manifest:main"
verify-forge-plugin-version = "forge.verify_plugin_version:main"
verify-forge-repo-structure = "forge.verify_repo_structure:main"
install-forge-labels = "forge.install_labels:main"
verify-forge-test-naming = "forge.verify_test_naming:main"
verify-forge-cli-wiring = "forge.verify_cli_wiring:main"
verify-forge-doc-consistency = "forge.verify_doc_consistency:main"
verify-forge-cve-usage = "forge.verify_cve_usage:main"
forge-gen-cli-reference = "forge.gen_cli_reference:main"
forge-gen-api-digest = "forge.gen_api_digest:main"
forge-gen-commit-types = "forge.gen_commit_types:main"
forge-continuation-append = "forge.continuation_append:main"
forge-doctor = "forge.doctor:main"
forge-next-prep = "forge.next_prep:main"
forge-precommit = "forge.precommit:main"
forge-post-merge = "forge.post_merge:main"
forge-post-checkout = "forge.post_checkout:main"
install-forge-githooks = "forge.install_githooks:main"
install-forge-claude-md = "forge.install_claudemd:main"
install-forge-claude-settings = "forge.install_claude_settings:main"
install-forge-readme-badges = "forge.install_readme_badges:main"
install-forge-bootstrap = "forge.install_bootstrap:main"
forge-upgrade = "forge.upgrade:main"
forge-pr-squash-comment = "forge.pr_squash_comment:main"
forge-slow-tests-report = "forge.slow_tests_report:main"
forge-config = "forge.forge_config:main"
forge-audit-agents = "forge.audit.agents:main"
forge-audit-deps = "forge.audit.deps:main"
forge-audit-dup = "forge.audit.dup:main"
forge-audit-suppressions = "forge.audit.suppressions:main"
forge-audit-orphans = "forge.audit.orphans:main"
forge-audit-data = "forge.audit.data:main"
forge-audit-claims = "forge.audit.claims:main"
forge-audit-all = "forge.audit.all:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]
audit = ["vulture>=2.10", "jsonschema>=4.0", "PyYAML>=6.0"]
audit-tach = ["tach>=0.30"]
# Type checker for the opt-in `typecheck` pre-commit step (pyrefly only).
typecheck = ["pyrefly>=1,<2"]
# Contributor / dev-loop umbrella. Aggregates the targeted extras so
# every reference to `pip install -e ".[dev]"` in forge's own source,
# docs, hook error messages, and test assertions resolves to a real
# install target inside forge's own repo. Consumer repos typically
# carry their own `[dev]` extra; this one is for forge itself.
dev = ["forge-scripts[test,audit,typecheck]"]

[project.urls]
Homepage = "https://github.com/misnaej/forge"
Repository = "https://github.com/misnaej/forge"

[tool.pytest.ini_options]
# Single source of truth for the test directory + durations capture.
# A bare local `pytest` and CI both pick these up, so the
# --durations flags that feed `forge-slow-tests-report` are declared
# once here rather than repeated at every call site (DRY).
testpaths = ["tests"]
addopts = "--durations=25 --durations-min=1.0"

[tool.forge]
# Dual-track release channels. Feature/fix PRs target `dev_branch`;
# minor releases promote dev → base via squash-merge. Hotfixes go
# directly to `base_branch`. Set `dev_branch = "main"` to opt out and
# fall back to single-branch flow.
base_branch = "main"
dev_branch = "dev"

[tool.forge.cli_wiring]
# Opt-in to the cli_wiring pre-commit step. Forge enables it because
# its layout matches WIRING_SOURCES in src/forge/verify_cli_wiring.py.
# Consumer repos with different layouts should leave this disabled.
enabled = true

[tool.forge.precommit]
# Forge dogfoods its own opt-in typecheck step. Non-blocking (the default):
# pyrefly 1.0 is young and a future false positive should warn, not refuse a
# commit. Strict settings + the interrogate FP silence live in pyrefly.toml.
enable = ["typecheck"]

[tool.forge.docstring_coverage]
# Optional SVG badge generated by verify-forge-docstring-coverage at
# .badges/DocstringCoverage.svg. Off by default — consumers who want
# a status badge in their README opt in. The coverage gate itself
# (fail-under in [tool.interrogate]) is always enforced.
badge = true

[tool.forge.badges]
# Dogfood install-forge-readme-badges: write the status-badge managed block
# into README.md (between the forge:badges markers). Refreshed by the
# bootstrap `readme-badges` step.
enabled = true

[tool.interrogate]
# Docstring-coverage threshold consumed by the forge-precommit step
# `docstring_coverage`. Nested functions / closures are EXEMPT
# (ignore-nested-functions): trivial test stubs (fake_run, _stub) carry
# their meaning in the name, ruff's D-rules already skip nested defs, and
# requiring a docstring on each is boilerplate, not signal. Every
# top-level public symbol is still required, so forge holds the real
# surface at 100%. Consumers typically start at the FOUNDATION §8 default
# of 90 and ratchet up (see FOUNDATION §4 "threshold = current passing
# baseline. Raise over time.").
fail-under = 100
ignore-init-method = false
ignore-init-module = false
ignore-nested-functions = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["forge*"]

[tool.setuptools.package-data]
forge = ["data/*.md"]

[tool.setuptools_scm]
# Version derived from the latest git tag (e.g. v1.1.0 → 1.1.0).
# Between tags, a dev suffix is appended (1.1.0.devN+gHASH).
# No manual version edits — forge devs only `git tag vX.Y.Z`.
fallback_version = "0.0.0+unknown"
